完善用户基本信息页面 Fixes #8
